<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_qrcode"
        android:icon="@drawable/ic_baseline_credit_card"
        android:title="@string/nav_qrcode"/>
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/info_icon"
        android:title="@string/nav_help"/>
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="Rate Us"/>
    <item
        android:id="@+id/nav_privary"
        android:icon="@drawable/ic_baseline_privacy"
        android:title="Privacy Policy"/>
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/debit_share_icon"
        android:title="@string/nav_share"/>

</menu>