<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:padding="10dp"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="10dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="5dp">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp">

               <TextView
                   android:id="@+id/homedashboardparagraph1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentLeft="true"
                   android:layout_centerVertical="true"
                   android:layout_marginLeft="13dp"
                   android:text="@string/homedashboardparagraph1"
                   android:fontFamily="@font/regular"
                   android:textColor="@color/black"
                  android:textAppearance="@style/TextAppearance.AppCompat.Small"/>


               <LinearLayout
                   android:id="@+id/netbalance_transaction_layout"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentEnd="true"
                   android:layout_centerHorizontal="true"
                   android:layout_centerVertical="true"
                   android:layout_gravity="center"
                   android:layout_marginRight="10dp"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/netbalance"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="5dp"
                       android:fontFamily="@font/bold"
                       android:text="@string/debitbalance"
                       android:textColor="@color/warning"
                       android:textAppearance="@style/TextAppearance.AppCompat.Small"/>



                   <TextView
                       android:id="@+id/net_amount_symbol"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="5dp"
                       android:fontFamily="@font/bold"
                       android:text="$"
                       android:layout_marginLeft="5dp"
                       android:textColor="@color/warning"
                       android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
               </LinearLayout>


           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:id="@+id/cardlayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <LinearLayout
                       android:id="@+id/debit"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginRight="5dp"
                       android:background="@drawable/debit_card"
                       android:layout_weight="1"
                       android:orientation="vertical">


                       <LinearLayout
                           android:id="@+id/debit_transaction_layout"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_marginTop="10dp"
                           android:orientation="horizontal">

                           <TextView
                               android:id="@+id/debitbalance"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="5dp"
                               android:text="@string/app_name"
                               android:fontFamily="@font/bold"
                               android:textColor="@color/white"
                               android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                           <TextView
                               android:id="@+id/debit_amount_symbol"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="5dp"
                               android:fontFamily="@font/bold"
                               android:text="$"
                               android:layout_marginLeft="5dp"
                               android:textColor="@color/white"
                               android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                       </LinearLayout>

                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:layout_marginEnd="10dp"
                           android:layout_marginBottom="5dp"
                           android:gravity="right"
                           android:text="@string/debitbalancetext"
                           android:fontFamily="@font/regular"
                           android:textColor="@color/white"
                           android:textAppearance="@style/TextAppearance.AppCompat.Small"/>


                   </LinearLayout>

                   <LinearLayout
                       android:id="@+id/credit"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:background="@drawable/cradit_card"
                       android:layout_weight="1"
                       android:orientation="vertical">

                       <LinearLayout
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:layout_gravity="center"
                           android:orientation="horizontal">

                           <TextView
                               android:id="@+id/creditbalance"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="5dp"
                               android:text="@string/app_name"
                               android:fontFamily="@font/bold"
                               android:textColor="@color/white"
                               android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>



                           <TextView
                               android:id="@+id/credit_amount_symbol"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginTop="5dp"
                               android:fontFamily="@font/bold"
                               android:text="$"
                               android:layout_marginLeft="5dp"
                               android:textColor="@color/white"
                               android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                       </LinearLayout>

                       <TextView
                           android:id="@+id/textView10"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:layout_marginEnd="10dp"
                           android:layout_marginBottom="5dp"
                           android:gravity="right"
                           android:fontFamily="@font/regular"
                           android:text="@string/creditbalancetext"
                           android:textColor="@color/white"
                           android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                   </LinearLayout>

               </LinearLayout>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/cardlayout"
                   android:layout_alignParentRight="true"
                   android:layout_marginTop="10dp"
                   android:layout_marginRight="10dp"
                   android:fontFamily="@font/regular"
                   android:text="@string/homedashboardparagraph2"
                   android:textColor="@color/grey"
                   android:textSize="10sp"/>


           </RelativeLayout>
       </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/alltransaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/homedashboardparagraph3"
                android:fontFamily="@font/bold"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/alltransaction"
                android:layout_alignParentRight="true"
                android:gravity="bottom"
                android:fontFamily="@font/regular"
                android:text="@string/homedashboardparagraph4"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"/>



        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:text="No Data Found"
                android:fontFamily="@font/regular"
                android:drawableTop="@drawable/ic_baseline_info"
                android:drawablePadding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/prog"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transactionrecyclerview"
                android:layout_width="match_parent"
                android:fitsSystemWindows="true"
                tools:listitem="@layout/transaction_row"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>