<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/scannerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:frameAspectRatioHeight="1"
            app:frameAspectRatioWidth="1"
            app:frameColor="@android:color/white"
            app:frameCornersRadius="0dp"
            app:frameCornersSize="50dp"
            app:frameSize="0.75"
            app:frameThickness="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:maskColor="#77000000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addcontact_statusbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <RelativeLayout
                android:id="@+id/add_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/add_contact_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/debitbalance"
                    android:src="@drawable/s"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/add_contact_icon"
                    android:fontFamily="@font/bold"
                    android:text="@string/selectcustomerdashboardheading"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addcontact_statusbar"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/regular"
            android:text="@string/selectcustomerdashboardparagraph1"
            android:textColor="@color/black"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:text="No Data Found"
            android:fontFamily="@font/regular"
            android:drawableTop="@drawable/ic_baseline_info"
            android:drawablePadding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:id="@+id/prog"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionrecyclerview"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            tools:listitem="@layout/contact_row"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>


</LinearLayout>