<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alert_dialog"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="20sp"
    app:cardElevation="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_alert"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/alertbox_cross_icon_debit"/>

        <LinearLayout
            android:id="@+id/summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/transaction_image_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/customer_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_bg4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:fontFamily="@font/bold"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/customer_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/customer_image"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:fontFamily="@font/bold"
                    android:text="@string/formdashboardheading">

                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/transaction_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/transaction_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/transaction_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/debitbalance"
                        android:fontFamily="@font/bold"
                        android:textColor="@color/warning"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/transactionamountsymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="$"
                        android:fontFamily="@font/bold"
                        android:textColor="@color/warning"
                        android:textSize="35sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/transaction_remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/transaction_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:maxLength="250"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/homedashboardparagraph1"
                    android:textAlignment="center"
                   android:textAppearance="@style/TextAppearance.AppCompat.Small">

                </TextView>

                <TextView
                    android:id="@+id/transaction_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transaction_remarks"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/regular"
                    android:text="@string/homedashboardparagraph1">

                </TextView>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/share_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/debit_share_icon"
                tools:ignore="VectorDrawableCompat">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Share With Your Customer"
                android:textColor="@color/black"
                android:fontFamily="@font/regular"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>